--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -16,6 +16,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
