--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -16,8 +16,6 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout code
@@ -54,6 +52,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Generate tag name
+        run: |
+          echo "RELEASE_TAG=build-$(TZ=Asia/Tokyo date +'%Y.%m.%d-%H%M%S')" >> $GITHUB_ENV
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -65,6 +67,7 @@ jobs:
       - name: Update 'Latest' Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: "latest"
-          body: "Latest development build from main branch."
+          tag_name: ${{ env.RELEASE_TAG }}
+          generate_release_notes: true
+          prerelease: true
           files: artifacts/pocket-seal-installer-*/*
