--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -2,10 +2,22 @@
   {
     "name": "io.ktor.network.selector.InterestSuspensionsMap",
     "fields": [
-      { "name": "readHandlerReference",  "allowUnsafeAccess": true },
-      { "name": "writeHandlerReference", "allowUnsafeAccess": true },
-      { "name": "acceptHandlerReference", "allowUnsafeAccess": true },
-      { "name": "connectHandlerReference", "allowUnsafeAccess": true }
+      {
+        "name": "readHandlerReference",
+        "allowUnsafeAccess": true
+      },
+      {
+        "name": "writeHandlerReference",
+        "allowUnsafeAccess": true
+      },
+      {
+        "name": "acceptHandlerReference",
+        "allowUnsafeAccess": true
+      },
+      {
+        "name": "connectHandlerReference",
+        "allowUnsafeAccess": true
+      }
     ]
   },
   {
@@ -15,6 +27,18 @@
         "name": "closed"
       }
     ],
+    "allDeclaredConstructors": true
+  },
+  {
+    "name": "kotlin.reflect.KTypeProjection",
+    "allDeclaredFields": true,
+    "allDeclaredMethods": true,
+    "allDeclaredConstructors": true
+  },
+  {
+    "name": "[Lkotlin.reflect.KTypeProjection;",
+    "allDeclaredFields": true,
+    "allDeclaredMethods": true,
     "allDeclaredConstructors": true
   }
 ]
